[project]
name = "Load"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "tbongkim03", email = "tbongkim03@gmial.com"},
]
dependencies = [
    "tabulate>=0.9.0",
    "pandas>=2.2.2",
    "pyarrow>=17.0.0",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
